--- a/index.html
+++ b/index.html
@@ -42,14 +42,31 @@
     body{
       margin:0;
       font-family: var(--bFont);
+      line-height: 1.6;
       color: var(--ink);
       background: linear-gradient(180deg, #ffffff, var(--stone));
+      text-rendering: optimizeLegibility;
+      -webkit-font-smoothing: antialiased;
+      color-scheme: light;
     }
 
     a{ color:inherit; text-decoration:none; }
     a:hover{ text-decoration:underline; text-underline-offset: 3px; }
 
     .page{ width:min(100%, var(--max)); margin:0 auto; padding: 34px 22px 72px; }
+
+    .skip{
+      position:absolute;
+      left:-999px;
+      top:-999px;
+      padding:10px 14px;
+      background:#0f1f3a;
+      color:#f6f6f3;
+      border-radius:10px;
+      z-index:999;
+      text-decoration:none;
+    }
+    .skip:focus{ left:16px; top:12px; }
 
     header.top{
       display:flex;
@@ -79,6 +96,27 @@
     .brandName{ margin:0; font-family: var(--hFont); font-size: 18px; letter-spacing:-0.2px; }
     .tagline{ margin:0; font-size: 13px; color: var(--muted); }
 
+    nav.nav{
+      display:flex;
+      gap: 8px;
+      flex-wrap:wrap;
+      align-items:center;
+    }
+    nav.nav a{
+      padding: 8px 10px;
+      border-radius: 10px;
+      color: var(--muted);
+      font-size: 13px;
+      border: 1px solid transparent;
+      transition: color .12s ease, border-color .12s ease, background .12s ease;
+    }
+    nav.nav a:hover{ color: var(--navy); border-color: rgba(15,23,58,.12); background: rgba(15,23,58,.04); text-decoration:none; }
+    nav.nav a:focus-visible{
+      outline: 2px solid var(--gold);
+      outline-offset: 2px;
+      border-color: transparent;
+    }
+
     .actions{ display:flex; gap: 10px; flex-wrap:wrap; align-items:center; }
     .chip{
       padding: 10px 14px;
@@ -103,7 +141,7 @@
       box-shadow: 0 0 0 8px rgba(200,162,74,.20);
     }
 
-    main{ margin-top: 28px; display:grid; grid-template-columns: 1.08fr .92fr; gap: 26px; align-items:start; }
+    main{ margin-top: 32px; display:grid; grid-template-columns: 1.08fr .92fr; gap: 32px; align-items:start; }
 
     .hero{
       background: var(--card);
@@ -185,6 +223,8 @@
       width: 16px; height: 16px;
       stroke: #f4e7c2;
       stroke-width: 1.6;
+      stroke-linecap: round;
+      stroke-linejoin: round;
       fill: none;
     }
     .fact small{ display:block; font-size: 12px; letter-spacing:.06em; text-transform: uppercase; color: var(--muted); }
@@ -218,7 +258,7 @@
     .item b{ display:block; font-size: 15px; }
     .item span{ display:block; color: rgba(247,246,243,.82); font-size: 13px; line-height:1.55; }
 
-    .section{ margin-top: 40px; }
+    .section{ margin-top: 44px; }
     .sectionHead{ display:flex; flex-direction:column; gap: 6px; margin-bottom: 12px; }
     .sectionHead h2{ margin:0; font-family: var(--hFont); font-size: 30px; letter-spacing:-0.7px; color: var(--navy); }
     .sectionHead p{ margin:0; color: var(--muted); line-height:1.65; font-size: 15px; max-width: 70ch; }
@@ -237,6 +277,7 @@
       position:relative;
       overflow:hidden;
     }
+    .cardHead{ display:flex; align-items:center; gap: 10px; margin-bottom: 8px; }
     .card h3{ margin:0; font-size: 14px; letter-spacing: .12em; text-transform: uppercase; color: var(--gold-strong); }
     .card b{ font-size: 17px; letter-spacing:-0.2px; color: var(--navy2); margin-top: 2px; }
     .card span{ color: var(--muted); font-size: 14px; line-height: 1.6; }
@@ -281,6 +322,9 @@
     footer{ margin-top: 18px; padding: 10px 6px; text-align:center; color: var(--muted2); font-size: 12.5px; }
 
     @media (max-width: 1120px){
+      header.top{ flex-direction:column; align-items:flex-start; }
+      nav.nav{ width:100%; }
+      nav.nav a{ padding: 10px 12px; }
       main{ grid-template-columns: 1fr; }
       .contact{ grid-template-columns: 1fr; }
     }
@@ -296,7 +340,7 @@
       .brand img{ width: 52px; height: 52px; }
       .page{ padding: 28px 18px 64px; }
       .hero, .panel, .contact{ padding: 20px; }
-      main{ gap: 18px; }
+      main{ gap: 22px; }
       .facts{ grid-template-columns: 1fr; }
       .framework{ grid-template-columns: 1fr; }
       .credGrid{ grid-template-columns: 1fr; }
@@ -310,6 +354,7 @@
 </head>
 
 <body>
+  <a class="skip" href="#main">Skip to content</a>
   <div class="page">
     <header class="top">
       <div class="brand">
@@ -319,6 +364,13 @@
           <p class="tagline">Fractional CFO & Strategic Financial Advisory</p>
         </div>
       </div>
+      <nav class="nav" aria-label="Primary">
+        <a href="#value">Value</a>
+        <a href="#services">Services</a>
+        <a href="#who">Who</a>
+        <a href="#credibility">Credibility</a>
+        <a href="#contact">Contact</a>
+      </nav>
       <div class="actions">
         <a class="chip primary" href="mailto:info@coreadvisorsglobal.com?subject=Intro%20call%20with%20Core%20Advisors">Book intro call</a>
         <a class="chip" href="tel:+9613999836">Call +961 3 999 836</a>
@@ -326,7 +378,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="main">
       <section class="hero" aria-labelledby="hero-title">
         <p class="eyebrow">Senior financial leadership</p>
         <h1 id="hero-title">We step in when the stakes are high.</h1>
@@ -422,41 +474,47 @@
 
       <div class="framework" aria-label="Service framework">
         <div class="card">
-          <div class="cardIcon" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
-              <path d="M6 7h3m6 0h3"></path>
-              <path d="M7.5 7v10"></path>
-              <path d="M12 12h6"></path>
-              <path d="M15.5 12v5"></path>
-              <path d="M6 17h4"></path>
-              <path d="M12 17h2"></path>
-            </svg>
+          <div class="cardHead">
+            <div class="cardIcon" aria-hidden="true">
+              <svg viewBox="0 0 24 24">
+                <path d="M6 7h3m6 0h3"></path>
+                <path d="M7.5 7v10"></path>
+                <path d="M12 12h6"></path>
+                <path d="M15.5 12v5"></path>
+                <path d="M6 17h4"></path>
+                <path d="M12 17h2"></path>
+              </svg>
+            </div>
+            <h3>Operate</h3>
           </div>
-          <h3>Operate</h3>
           <b>Finance that runs correctly.</b>
           <span>Cash governance, 12–24 month forecasts, variance tracking, KPI rhythms with accountable owners.</span>
         </div>
         <div class="card">
-          <div class="cardIcon" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
-              <path d="M6 16v-4"></path>
-              <path d="M12 16v-8"></path>
-              <path d="M18 16v-6"></path>
-              <path d="M5 16h14"></path>
-            </svg>
+          <div class="cardHead">
+            <div class="cardIcon" aria-hidden="true">
+              <svg viewBox="0 0 24 24">
+                <path d="M6 16v-4"></path>
+                <path d="M12 16v-8"></path>
+                <path d="M18 16v-6"></path>
+                <path d="M5 16h14"></path>
+              </svg>
+            </div>
+            <h3>Decide</h3>
           </div>
-          <h3>Decide</h3>
           <b>Decisions on defensible numbers.</b>
           <span>Scenario models, pricing and unit economics, concise readouts for leadership and boards.</span>
         </div>
         <div class="card">
-          <div class="cardIcon" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
-              <path d="M12 4l7 4v5c0 3.9-3 7.4-7 8-4-0.6-7-4.1-7-8V8l7-4z"></path>
-              <path d="M10 12l2 2 3-3"></path>
-            </svg>
+          <div class="cardHead">
+            <div class="cardIcon" aria-hidden="true">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 4l7 4v5c0 3.9-3 7.4-7 8-4-0.6-7-4.1-7-8V8l7-4z"></path>
+                <path d="M10 12l2 2 3-3"></path>
+              </svg>
+            </div>
+            <h3>Prepare</h3>
           </div>
-          <h3>Prepare</h3>
           <b>Ready for investors and diligence.</b>
           <span>Board decks, investor materials, data rooms that withstand questions and close timelines.</span>
         </div>
