--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
     .skip:focus{ left:16px; top:12px; }
 
     header.top{
-      display:flex;
+      display:grid;
+      grid-template-columns: auto minmax(0, 1fr) auto;
       align-items:center;
-      justify-content:space-between;
-      flex-wrap: nowrap;
       gap: 14px;
       padding: 16px 18px;
       border-radius: var(--radius2);
@@ -83,6 +82,7 @@
       top: 12px;
       z-index: 10;
       backdrop-filter: blur(10px);
+      column-gap: 18px;
     }
     .brand{ display:flex; align-items:center; gap: 12px; }
     .brand img{
@@ -99,12 +99,11 @@
 
     nav.nav{
       display:flex;
-      gap: 8px;
+      gap: 12px;
       flex-wrap: nowrap;
       align-items:center;
-      flex: 1 1 auto;
-      min-width: 0;
       justify-content:center;
+      min-width: 0;
       overflow-x:auto;
       -webkit-overflow-scrolling: touch;
     }
@@ -124,7 +123,7 @@
       border-color: transparent;
     }
 
-    .actions{ display:flex; gap: 10px; flex-wrap:wrap; align-items:center; }
+    .actions{ display:flex; gap: 10px; flex-wrap:nowrap; align-items:center; justify-content:flex-end; }
     .chip{
       padding: 10px 14px;
       border-radius: 999px;
@@ -329,7 +328,7 @@
     footer{ margin-top: 18px; padding: 10px 6px; text-align:center; color: var(--muted2); font-size: 12.5px; }
 
     @media (max-width: 1120px){
-      header.top{ flex-direction:column; align-items:flex-start; }
+      header.top{ display:flex; flex-direction:column; align-items:flex-start; }
       nav.nav{ width:100%; }
       nav.nav a{ padding: 10px 12px; }
       main{ grid-template-columns: 1fr; }
